Fixed pronoun squishing.

--- a/racetime/static/racetime/style/base.css
+++ b/racetime/static/racetime/style/base.css
@@ -197,6 +197,7 @@ table th {
     line-height: 1.6923;
 }
 .user-pop > .pronouns {
+    width: max-content;
     background: #1a1c20;
     color: #8c898c;
     border-radius: 4px;
